--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">菜谱</string>
+    <string name="app_name">违章管理</string>
     <string name="action_settings">Settings</string>
     <string name="action_1">全部</string>
     <string name="action_2">鲁菜</string>
