register with id card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_7">午餐</string>
     <string name="action_8">晚餐</string>
     <string name="login_username_hint">请输入用户名&#8230;</string>
+    <string name="login_idCard">请输入身份证号&#8230;</string>
     <string name="login_password_hint">请输入密码&#8230;</string>
     <string name="login_email_hint">请再次输入密码&#8230;</string>
     <string name="login">登录</string>
